--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ figcaption {
 	height: 100%
 }
 .hero-image {
-	background-image: url('./media/images/THANK_YOU_NYC-min.jpg');
+	background-image: url('./media/images/THANK_YOU_NYC-min.jpg);
 	background-color: #cccccc;
 	height: 500px;
 	background-position: center;
